# pantsbuild-bug-pdm-dynamic-version-support

./: .gitignore  README.md  pants.toml  pyproject.toml
src/project/: BUILD  pyproject.toml
